external import of dune config